--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <title>Pizza Order Form</title>
 </head>
 <body>
-    <script src="./index.js"></script>
+    <script src="./index.js">
+        function custom() {
+            document.getElementByID("custom").disabled = false;
+            document.getElementByID("pre-made").disabled = true;
+        }
+        function preMade() {
+            document.getElementByID("pre-made").diabled = false;
+            document.getElementByID("custom").disabled = true;
+        }
+    </script>
     <center>
         <h1>Bio Petty Pizza</h1>
     </center>
-    <form>
+    <form name="myForm">
         <fieldset>
             <legend>User Information</legend>
             <ul>
@@ -104,10 +113,10 @@
                 </li>
             </ul>
             <button type="button" onclick=custom()>Custom</button>
-            <button type="button" conclick=preMade()>Pre-Made</button>
+            <button type="button" conclick=premade()>Pre-Made</button>
         </fieldset>
 
-        <fieldset id="custom" disabled="true">
+        <fieldset id="custom">
             <legend>Pizza Toppings</legend>
             <ul>
                 <li>
@@ -173,11 +182,11 @@
             </ul>
         </fieldset>
 
-        <fieldset id="custom" disabled="true">
+        <fieldset id="custom">
             <legend>Type of Sause</legend>
             <ul>
                 <li>
-                    <input type="radio" id="tomatoe" name="sauce">
+                    <input type="radio" id="tomato" name="sauce">
                     <label for="tomato">Tomato Sauce</label>
                 </li>
                 <li>
@@ -195,7 +204,7 @@
             </ul>
         </fieldset>
 
-        <fieldset id="custom" disabled="true">
+        <fieldset id="custom">
             <legend>Pizza Size</legend>
             <ul>
                 <li>
@@ -221,79 +230,71 @@
             </ul>
         </fieldset>
 
-        <fieldset id="pre-made" disabled="true">
+        <fieldset id="pre-made">
             <legend>Pre-Made Pizza Types</legend>
             <ul>
                 <li>
                     <input type="radio" name="type" id="cheese">
                     <label for="cheese">Cheese Pizza</label>
                     <p>
-                        Click here for more information
-                        <a href=""></a>
+                        <button class="addMore" title="Cheese and tomato sauce on dough.">Info on Cheese Pizza</button>
                     </p>
                 </li>
                 <li>
                     <input type="radio" name="type" id="veggie">
                     <label for="veggie">Veggie Pizza</label>
                     <p>
-                        Click here for more information
-                        <a href=""></a>
+                        <button class="addMore" title="Tomatos, mushrooms, black olives, spinach,  and basil with tomato sauce on dough.">Info on Veggie Pizza</button>
                     </p>
                 </li>
                 <li>
                     <input type="radio" name="type" id="pepperoni">
                     <label for="pepperoni">Pepperoni Pizza</label>
                     <p>
-                        Click here for more information
-                        <a href=""></a>
+                        <button class="addMore" title="Pepperoni and tomato sauce on dough.">Info on Pepperoni Pizza</button>
                     </p>
                 </li>
                 <li>
                     <input type="radio" name="type" id="meat">
                     <label for="meat">Meat Lovers</label>
                     <p>
-                        Click here for more information
-                        <a href=""></a>
+                        <button class="addMore" title="Pepperoni, beef, and sausage with tomato sauce on dough.">Info on Meat Lovers</button>
                     </p>
                 </li>
                 <li>
                     <input type="radio" name="type" id="margherita">
                     <label for="margherita">Margherita Pizza</label>
                     <p>
-                        Click here for more information
-                        <a href=""></a>
+                        <button class="addMore" title="Basil, tomatoes, and mozzarella with tomato sauce on dough.">Info on Margherita Pizza</button>
                     </p>
                 </li>
                 <li>
                     <input type="radio" name="type" id="bbq_chicken">
                     <label for="bbq_chicken">Barbecue Chicken Pizza</label>
                     <p>
-                        Click here for more information
-                        <a href=""></a>
+                        <button class="addMore" title="Chicken and BBQ sauce on dough.">Info on BBQ Chicken Pizza</button>
                     </p>
                 </li>
                 <li>
                     <input type="radio" name="type" id="hawaiian">
                     <label for="hawaiian">Hawaiian Pizza</label>
                     <p>
-                        Click here for more information
-                        <a href=""></a>
+                        <button class="addMore" title="Pineapple and ham with BBQ sauce on dough.">Info on Hawaiian Pizza</button>
                     </p>
                 </li>
                 <li>
                     <input type="radio" name="type" id="supreme">
                     <label for="supreme">Supreme Pizza</label>
                     <p>
-                        Click here for more information
-                        <a href=""></a>
+                        <button class="addMore" title="Pepperoni, sausage, meatballs, mushrooms, green bell peppers, and onions with tomato sauce on dough.">Info on Supreme Pizza</button>
                     </p>
                 </li>
                 <li>
                     <input type="radio" name="type" id="works">
                     <label for="works">The Works Pizza</label>
                     <p>
-                        Click here for more information
-                        <a href=""></a>
+                        <button class="addMore" title="Pepperoni, julienne-cut Canadian bacon, spicy Italian sausage, fresh-cut onions, crisp green peppers, mushrooms, ripe black olives, and real cheese made from mozzarella with tomato sauce on dough.">Info
+                            on Supreme Pizza</button>
                     </p>
                 </li>
             </ul>
