--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <hr>
 
         <form>
-        <fieldset id="custom">
+        <fieldset id="custom" disabled="true">
             <legend>Pizza Toppings</legend>
             <ul>
                 <li>
@@ -176,7 +176,7 @@
             </ul>
         </fieldset>
 
-        <fieldset id="custom2">
+        <fieldset id="custom2" disabled="true">
             <legend>Type of Sauce</legend>
             <ul>
                 <li>
@@ -198,7 +198,7 @@
             </ul>
         </fieldset>
 
-        <fieldset id="pre-made">
+        <fieldset id="pre-made" disabled="true">
             <legend>Pre-Made Pizza Types</legend>
             <ul>
                 <li>
